# BOSS-printing_Angular_backend

./: .env  Cargo.toml  render.yaml  test_paytm.rs
src/: main.rs
src/db/: connection.rs
src/handlers/: auth_handler.rs  code_handler.rs  download_handler.rs  history_handler.rs  mod.rs  print_handler.rs  qr_handler.rs  upload_handler.rs
src/models/: mod.rs  print_job.rs  request.rs
src/routes/: mod.rs
src/services/: mod.rs  print_service.rs
src/storage/: file_store.rs  mod.rs
src/utils/: code_generator.rs
